se añaden iconos al footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         crossorigin="anonymous">
     <!-- Mi CSS. Debe ir luego del estilo de bootstrap -->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Piramide Joyas</title>
+    <script src="https://kit.fontawesome.com/d9a0db298f.js" crossorigin="anonymous"></script>
+    <title>Piramide Joyas | Inicio</title>
 </head>
 
 <body>
@@ -63,10 +64,10 @@
         <div class="container-fluid text-center text-md-left">
             <div class="row">
                 <div class="col-md-6 mb-md-0 mb-3">
-                    <h5 class="text-end">WhatsApp</h5>
+                    <h5 class="text-end"><i class="fa-brands fa-whatsapp"></i></h5>
                 </div>
                 <div class="col-md-6 mb-md-0 mb-3">
-                    <h5 class="text-start">Instagram</h5>
+                    <h5 class="text-start"><i class="fa-brands fa-instagram"></i></h5>
                 </div>
             </div>
         </div>
