--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,8 +11,7 @@
         crossorigin="anonymous">
     <!-- Mi CSS. Debe ir luego del estilo de bootstrap -->
     <link rel="stylesheet" href="./css/style.css">
-    <script src="https://kit.fontawesome.com/d9a0db298f.js" crossorigin="anonymous"></script>
-    <title>Piramide Joyas | Contacto</title>
+    <title>Piramide Joyas</title>
 </head>
 
 <body>
@@ -33,37 +32,28 @@
     </header>
 
     <main>
-        <div class="container">
-            <div class="text-center">
-                <form>
-                    <div class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon1"></span>
-                        <input type="text" class="form-control" placeholder="Nombre" aria-label="Username"
-                            aria-describedby="basic-addon1">
-                    </div>
-                    <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email" aria-label="Recipient's username"
-                            aria-describedby="basic-addon2">
-                        <span class="input-group-text" id="basic-addon2"></span>
-                    </div>
-                    <div class="input-group">
-                        <span class="input-group-text">Contanos...</span>
-                        <textarea class="form-control" aria-label="With textarea"></textarea>
-                    </div>
-                </form>
-            </div>
-        </div>
-        
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1"></span>
+            <input type="text" class="form-control" placeholder="Nombre" aria-label="Username" aria-describedby="basic-addon1">
+          </div>          
+          <div class="input-group mb-3">
+            <input type="email" class="form-control" placeholder="Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <span class="input-group-text" id="basic-addon2"></span>
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">Contanos...</span>
+            <textarea class="form-control" aria-label="With textarea"></textarea>
+          </div>
     </main>
 
     <footer class="font-small pt-4">
         <div class="container-fluid text-center text-md-left">
             <div class="row">
                 <div class="col-md-6 mb-md-0 mb-3">
-                    <h5 class="text-end"><i class="fa-brands fa-whatsapp"></i></h5>
+                    <h5 class="text-end">WhatsApp</h5>
                 </div>
                 <div class="col-md-6 mb-md-0 mb-3">
-                    <h5 class="text-start"><i class="fa-brands fa-instagram"></i></h5>
+                    <h5 class="text-start">Instagram</h5>
                 </div>
             </div>
         </div>
